--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Archive</title>
     <!-- Bootstrap Stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
-<body class="container">
-    <div class="input-group my-5">
-        <input id="input-field" type="text" class="form-control" placeholder="Enter the book name" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchBooks()" class="btn btn-outline-success" type="button" id="button-addon2">Button</button>
-      </div>
-      <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
-      </div>
+
+<body>
+    <header>
+
+    </header>
+
+    <main class="container">
+        <h1 class="text-center mt-5 text-success">Book Archive</h1>
+        <div class="input-group my-4">
+            <input id="input-field" type="text" class="form-control" placeholder="Enter the book name"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="searchBooks()" class="btn btn-outline-success" type="button"
+                id="button-addon2">Search</button>
+        </div>
+        <div id="search-found" class="my-4"></div>
+        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 
 
 
     <!-- Bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
+    <!-- Custom script -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
